[gd_scene load_steps=3 format=3 uid="uid://k3234nrxk00h"]

[ext_resource type="Script" uid="uid://rfq5hwyfrl8v" path="res://enemies/melee_attack_cone.gd" id="1_ixjv8"]
[ext_resource type="Script" uid="uid://yt0hblrwwe6h" path="res://components/attack_component.gd" id="2_8jhb2"]

[node name="MeleeAttackCone" type="Node2D"]
script = ExtResource("1_ixjv8")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(1, 20, 140, 60, 140, -60, 1, -20)

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("2_8jhb2")
damage = 20.0
metadata/_custom_type_script = "uid://yt0hblrwwe6h"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
